--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
   </head>
   <body>
     <div id="content"></div>
+
     <script src="http://fb.me/react-0.10.0.js"></script>
     <script src="http://fb.me/JSXTransformer-0.10.0.js"></script>
     <script type="text/jsx">
-      /**
-       * @jsx React.DOM
-       */
+        /**
+         * @jsx React.DOM
+         */
+        var SearchContainer = React.createClass({
+          render: function() {
+            return (
+              <div className="searchContainer">
+                I am a SearchContainer.
+              </div>
+            );
+          }
+        });
+        React.renderComponent(
+          <SearchContainer />,
+          document.getElementById('content')
+        );
     </script>
   </body>
 </html>
